# monoid-agent-kernel

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  bash.exe.stackdump  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: BACKEND.md  CLI.md  COMPATIBILITY.md  CONFORMANCE.md  CONTRACTS.md  CORE_HELPER_KIT.md  DBOS_REFERENCE.md  EMBEDDING.md  FIRST_SKILL_TUTORIAL.md  OBSERVABILITY.md  OPERATIONAL_RULE_COVERAGE.md  PHASE_1S_COVERAGE.md  PHASE_4_CLOSURE.md  README.md  REFACTOR_PLAN.md  REFERENCE.md  RUNNER_BACKEND_RESPONSIBILITY_MAP.md  SKILLS_DESIGN.md  SUBAGENT_DESIGN.md  THREAT_MODEL.md  TOOL_SURFACE.md  V0_18_RELEASE_AUDIT.md
docs/security/: PRODUCTION_CHECKLIST.md  SECURITY_MODEL.md  THREAT_MODEL.md
examples/: custom_model_adapter.py  custom_tool_quickstart.py  embedding_hosted_product.py  embedding_local_product.py  full_stack_integration.py  memory_quickstart.py  messy_workspace_cleanup.py  minimal_quickstart.py  otel_tracing.py  redacting_event_sink.py  run-spec.json  runtime-config.json
examples/custom_tools/: word_count_tool.py
examples/workspaces/edit_markdown_notes/: notes.md
src/monoid_agent_kernel/: __init__.py  _policy_util.py  _proc.py  _version.py  builder.py  cli.py  contracts.py  env.py  errors.py  event_loader.py  identifiers.py  loop.py  loop_phases.py  memory.py  narration.py  permissions.py  public_view.py  recorder.py  shell.py  subagent_loader.py  tasks.py  tool_loader.py  web.py
src/monoid_agent_kernel/conformance/: __init__.py  contracts.py  fixtures.py  harness.py  provenance.py  report.py  runner.py  verification.py
src/monoid_agent_kernel/core/: __init__.py  _event_log.py  _util.py  agents.py  cancellation.py  capability.py  capability_revocation.py  checkpoint.py  compatibility.py  context.py  control.py  control_audit.py  durable_codec.py  durable_metadata.py  event_sequencing.py  event_subscription.py  events.py  external_agent_envelope.py  frontmatter.py  inbox.py  lease_admission.py  lifecycle.py  manifest.py  media.py  outbox.py  output_validator.py  packages.py  projections.py  prompt.py  proposal_file.py  result.py  schemas.py  scope.py  side_effect_policy.py  spec.py  streaming.py  subagent_runtime.py  tool_approval.py  tool_surface.py  wire_validation.py  (+2 more)
src/monoid_agent_kernel/mcp/: __init__.py  client.py  provider.py
src/monoid_agent_kernel/observability/: __init__.py  otel.py
src/monoid_agent_kernel/providers/: __init__.py  _common.py  base.py  fake.py  gateway.py  openai.py
src/monoid_agent_kernel/reference/: __init__.py  capability.py  command_inbox.py  conformance.py  event_index.py  event_reader.py  outbox.py
src/monoid_agent_kernel/skills/: __init__.py  definition.py  loader.py  provider.py
src/monoid_agent_kernel/tool_services/: __init__.py  base.py  jobs.py  shell.py  web.py
src/monoid_agent_kernel/tools/: base.py  builtin.py  decorator.py  defaults.py  tool_ids.py
src/monoid_agent_kernel/workspace/: __init__.py  local.py  paths.py
src/native_agent_runner/: __init__.py  _policy_util.py  _proc.py  cli.py  contracts.py  errors.py  event_loader.py  jobs.py  loop.py  narration.py  permissions.py  public_view.py  recorder.py  scenario_scoring.py  shell.py  subagent_loader.py  tasks.py  tool_loader.py  web.py
src/native_agent_runner/backend/: __init__.py  http.py  service.py  tokens.py
src/native_agent_runner/core/: __init__.py  _util.py  agents.py  capability.py  checkpoint.py  content.py  context.py  control.py  events.py  inbox.py  lifecycle.py  manifest.py  media.py  outbox.py  output_validator.py  packages.py  profiles.py  projections.py  prompt.py  proposal_file.py  result.py  schemas.py  spec.py  streaming.py  tool_surface.py  trace_context.py  workspace.py  workspace_index.py
src/native_agent_runner/llm_gateway/: __init__.py  http.py  service.py
src/native_agent_runner/mcp/: __init__.py  client.py  provider.py
studio-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
studio-ui/scripts/: check-contrast.mjs  check-diff.mjs  check-run-state.mjs
studio-ui/src/: App.svelte  app.css  main.ts  vite-env.d.ts
tests/: conftest.py  test_agent_loop_lifecycle.py  test_agent_runtime_config.py  test_async_loop.py  test_async_tools.py  test_backend.py  test_backend_command_inbox.py  test_backend_control.py  test_backend_dbos_control.py  test_backend_dbos_run.py  test_backend_event_index.py  test_backend_event_subscription.py  test_backend_http_api.py  test_backend_media.py  test_backend_providers.py  test_backend_recovery.py  test_backend_runtime_config.py  test_backend_stream.py  test_backend_turn_recovery.py  test_backend_watchdog.py  test_builder_cli.py  test_cancellation.py  test_canonical_hash.py  test_capability.py  test_capability_broker_contract.py  test_capability_revocation.py  test_checkpoint.py  test_checkpoint_store_contract.py  test_cli_and_openai.py  test_command_store_contract.py  test_compatibility_ledger.py  test_content_parts.py  test_context_providers.py  test_dbos_control_models.py  test_dbos_hosted_control.py  test_dbos_hosted_run.py  test_dbos_owned_runtime.py  test_dbos_run_driver.py  test_dbos_run_models.py  test_dbos_runtime_host.py  (+79 more)
tests/conformance/: capability_harness.py  test_capability_revocation_profile.py  test_capability_security_profile.py  test_compatibility_fixtures.py  test_control_plane_profile.py  test_durable_runner_profile.py  test_external_runner.py  test_import_boundaries.py  test_message_fabric_profile.py  test_multi_agent_profile.py  test_provenance.py  test_provenance_capture.py  test_provider_gateway_profile.py  test_reference_full_profile.py  test_report_versioning.py  test_runner_publication.py  test_side_effect_tool_agent_profile.py  test_skeleton.py  test_tool_agent_profile.py  test_verification.py
tests/support/: __init__.py  backend.py  backend_factory.py  backend_harness.py  dbos_control_worker.py  dbos_run_worker.py  http.py  mcp.py  process.py  runtime.py  studio_harness.py  test_tiers.py  waiting.py
(+149 files in other folders)
