[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "native-agent-runner"
version = "0.11.0"
description = "Standalone lightweight API-backed agent harness for safe file work"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "click>=8.1",
    "jsonschema>=4.21",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]
# Direct OpenAI provider adapter (local smoke tests only). Container / CSP-integrated
# runs use GatewayModelAdapter and do not need this. The import is lazy, so the package
# imports and OpenAIModelAdapter instantiates without it; only next_turn() requires it.
openai = [
    "openai>=1.80",
]
# Async HTTP for token streaming (GatewayModelAdapter.astream_turn). The import is lazy,
# so the package imports and the adapter instantiates without it; only astream_turn()
# requires it. The sync next_turn() stays on stdlib urllib, so the default install is
# unaffected.
http-async = [
    "httpx>=0.27",
]
# OpenTelemetry tracing (OtelEventSink). Only opentelemetry-api is needed (a no-op without
# an SDK/exporter); the import is lazy, so the package imports without it. The application
# installs opentelemetry-sdk + an exporter to actually emit spans.
otel = [
    "opentelemetry-api>=1.20",
]
# MCP (Model Context Protocol) client. JSON-RPC over Streamable HTTP, hand-rolled on httpx
# (the official `mcp` SDK is async-only and pulls a full server ASGI stack). The import is
# lazy, so the package imports without it; only McpToolProvider/McpHttpClient need it.
mcp = [
    "httpx>=0.27",
]

[project.scripts]
native-agent = "native_agent_runner.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/native_agent_runner"]
# Ship the PEP 561 marker so downstream type-checkers honor our inline type hints.
force-include = { "src/native_agent_runner/py.typed" = "native_agent_runner/py.typed" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
