[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "monoid-agent-kernel"
version = "0.14.0"
description = "Lightweight durable agent kernel for product integrations"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Hoonseok Yoon", email = "yoonhs9dev@gmail.com" }]
keywords = ["agent", "llm", "ai", "runtime", "kernel", "tools", "observability", "mcp"]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1",
    "jsonschema>=4.21",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-xdist>=3.6",
    "httpx>=0.27",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]
# Direct OpenAI provider adapter (local smoke tests only). Gateway-integrated runs on a
# host platform use GatewayModelAdapter and do not need this. The import is lazy, so the
# package imports and OpenAIModelAdapter instantiates without it; only next_turn() requires it.
openai = [
    "openai>=1.80",
]
# Async HTTP for token streaming (GatewayModelAdapter.astream_turn). The import is lazy,
# so the package imports and the adapter instantiates without it; only astream_turn()
# requires it. The sync next_turn() stays on stdlib urllib, so the default install is
# unaffected.
http-async = [
    "httpx>=0.27",
]
# OpenTelemetry tracing (OtelEventSink). Only opentelemetry-api is needed (a no-op without
# an SDK/exporter); the import is lazy, so the package imports without it. This extra is for
# the library code path — emitting spans needs the SDK + an exporter (see otel-export).
otel = [
    "opentelemetry-api>=1.20",
]
# Actually emit spans: the SDK + OTLP/HTTP exporter. Required for the Studio OTel toggle and
# any app that wants real export (the bare [otel] api-only extra is a no-op without these).
otel-export = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]
# MCP (Model Context Protocol) client. JSON-RPC over Streamable HTTP, hand-rolled on httpx
# (the official `mcp` SDK is async-only and pulls a full server ASGI stack). The import is
# lazy, so the package imports without it; only McpToolProvider/McpHttpClient need it.
mcp = [
    "httpx>=0.27",
]

[project.scripts]
monoid = "monoid_agent_kernel.cli:main"
native-agent = "monoid_agent_kernel.cli:main"

[project.urls]
Homepage = "https://github.com/hoonseokyoon/monoid-agent-kernel"
Repository = "https://github.com/hoonseokyoon/monoid-agent-kernel"
Issues = "https://github.com/hoonseokyoon/monoid-agent-kernel/issues"
Changelog = "https://github.com/hoonseokyoon/monoid-agent-kernel/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/monoid_agent_kernel", "src/native_agent_runner"]
# Internal developer journal — kept in the repo, excluded from the distributed wheel.
exclude = ["**/DX_NOTES.md"]
# Ship the PEP 561 marker so downstream type-checkers honor our inline type hints.
force-include = { "src/monoid_agent_kernel/py.typed" = "monoid_agent_kernel/py.typed", "src/native_agent_runner/py.typed" = "native_agent_runner/py.typed" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "unit: fast in-process tests with no external service dependency",
    "integration: multi-component tests that exercise reference services or threaded servers",
    "slow: tests that intentionally wait for subprocess, timeout, or multi-service behavior",
    "live: tests that require external credentials or network-backed providers",
    "serial: tests that must not run concurrently under pytest-xdist",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
